--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Universal Viewer Examples</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" type="text/css" href="uv.css">
+    <link rel="stylesheet" type="text/css" href="uv/helpers/uv.css">
     <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
     <script type="text/javascript" src="uv/lib/offline.js"></script>
     <script type="text/javascript" src="uv/uv.js"></script>
-    <script type="text/javascript" src="uvhelpers.js"></script>
+    <script type="text/javascript" src="uv/helpers/helpers.js"></script>
     <style>
         body {
             margin: 0px;
