--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <button id="next">&gt;</button>
     </div>
 
-    <div>
+    <!--<div>
         <textarea id="annotations" rows="10" cols="50" placeholder="annotations"></textarea>
         <button id="updateAnnotations">Update</button>
-    </div>
+    </div>-->
 
     <script type="text/javascript">
 
