--- a/app.html
+++ b/app.html
@@ -38,6 +38,7 @@
                 manifestIndex: Number(urlDataProvider.get('m', 0)),
                 sequenceIndex: Number(urlDataProvider.get('s', 0)),
                 canvasIndex: Number(urlDataProvider.get('cv', 0)),
+                deepLinkingEnabled: false,
                 rotation: Number(urlDataProvider.get('r', 0)),
                 xywh: urlDataProvider.get('xywh', '')
             }, urlDataProvider);
