--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Universal Viewer Examples</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="uv/favicon.ico">
     <link rel="stylesheet" type="text/css" href="uv/uv.css">
     <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
     <script type="text/javascript" src="uv/lib/offline.js"></script>
