--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
     </div>
 
     <div>
-        <textarea id="annotations" rows="10" cols="50" placeholder="annotations"></textarea>
-        <button id="updateAnnotations">Update</button>
+        <!--<textarea id="annotations" rows="10" cols="50" placeholder="annotations"></textarea>
+        <button id="updateAnnotations">Update</button>-->
+        <!--<button id="addAnnotation" disabled>Add Annotation</button>-->
     </div>
 
     <script type="text/javascript">
@@ -160,12 +161,42 @@
             });
         });
 
-        $('#updateAnnotations').on('click', function() {
+        annotationList = {
+            "@context": "http://iiif.io/api/search/0/context.json",
+            "@id": "http://wellcomelibrary.org/iiif/b18035723/manifest",
+            "@type": "sc:AnnotationList",
+            "within": {
+                "@type": "sc:Layer"
+            },
+            "startIndex": 0,
+            "resources": []
+        };
+
+        // $('#updateAnnotations').on('click', function() {
             
-            var annotations = JSON.parse($('#annotations').val());
+        //     var annotations = JSON.parse($('#annotations').val());
             
-            uv.set({
-                annotations: annotations
+        //     uv.set({
+        //         annotations: annotations
+        //     });
+        // });
+
+        var $addAnnotation = $('#addAnnotation');
+
+        // load test annotations
+        $.getJSON('test-annotations.json', function(testAnnotations) {
+
+            $addAnnotation.prop('disabled', false);
+
+            $addAnnotation.on('click', function() {
+
+                var annotation = testAnnotations[Math.floor(Math.random() * testAnnotations.length)];
+                annotation.on = "https://wellcomelibrary.org/iiif/b18035723/canvas/c0#xywh=909,3067,339,50";
+                annotationList.resources.push(annotation);
+
+                uv.set({
+                    annotations: annotationList
+                });
             });
         });
 
