--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div>
         <!--<textarea id="annotations" rows="10" cols="50" placeholder="annotations"></textarea>
         <button id="updateAnnotations">Update</button>-->
-        <!--<button id="addAnnotation" disabled>Add Annotation</button>-->
+        <button id="addAnnotation" disabled>Add Annotation</button>
     </div>
 
     <script type="text/javascript">
