--- a/embeds.html
+++ b/embeds.html
@@ -27,7 +27,9 @@
 
 <!--<script type="text/javascript" id="embedUV" src="http://localhost:8001/src/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>-->
 
-<iframe src="https://ipfs.io/ipfs/Qmb7N1ZmoE9k2Yz6r4cDmMYQB64Gi1X2damE2FFA66LX4X/uv/uv.html#?manifest=http://wellcomelibrary.org/iiif/b18035723/manifest&c=0&m=0&s=0&cv=0&config=examples-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1111,-1,4789,3543&r=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
+<!--<iframe src="https://ipfs.io/ipfs/Qmb7N1ZmoE9k2Yz6r4cDmMYQB64Gi1X2damE2FFA66LX4X/uv/uv.html#?manifest=http://wellcomelibrary.org/iiif/b18035723/manifest&c=0&m=0&s=0&cv=0&config=examples-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1111,-1,4789,3543&r=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>-->
+
+<iframe src="http://universalviewer.io/examples/uv/uv.html#?manifest=http://wellcomelibrary.org/iiif/b18035723/manifest&c=0&m=0&s=0&cv=0&config=examples-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1377,-197,5321,3936&r=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
 
 </body>
 </html>
