--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Universal Viewer Examples</title>
     <link rel="icon" href="uv/favicon.ico">
     <link rel="stylesheet" type="text/css" href="uv/uv.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
     <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
     <script type="text/javascript" src="uv/lib/offline.js"></script>
     <script type="text/javascript" src="uv/helpers.js"></script>
