--- a/mobile.html
+++ b/mobile.html
@@ -81,7 +81,7 @@
         $('#setManifestButton').on('click', function() {
             manifest = $('#manifest').val();
 
-            document.location.href = 'uv/uv.html#?manifest=' + manifest;
+            document.location.href = 'uv/uv.html#?manifest=' + manifest + '&locales=en-GB';
         });
 
     </script>
