--- a/av.html
+++ b/av.html
@@ -52,6 +52,7 @@
         function setupUV() {
 
             var data = {
+                root: './uv-av',
                 iiifResourceUri: manifest,
                 configUri: 'examples-config.json',
                 collectionIndex: Number(urlDataProvider.get('c', 0)),
