--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         }
 
         #uv {
+            /*
             width: 924px;
             height: 668px;
+            */
+            width: 1024px;
+            height: 576px;
         }
 
         #options {
