--- a/uv/uv.html
+++ b/uv/uv.html
@@ -31,7 +31,7 @@
         window.addEventListener('uvLoaded', function(e) { 
 
             urlDataProvider = new UV.URLDataProvider();
-            var locales = urlDataProvider.get("locales", '');
+            var locales = urlDataProvider.get('locales', '');
             var names = locales.split(',');
             var formattedLocales = [];
 
