--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
             uv.on('created', function() {
                 Utils.Urls.setHashParameter('manifest', manifest);
             });
+
+            // uv.on('openseadragonExtension.open', function() {
+            //     console.log('osd opened');
+            // });
         }
 
         function loadManifests(cb) {
