--- a/embeds.html
+++ b/embeds.html
@@ -30,7 +30,6 @@
 
 <!-- <iframe src="https://sophiedixon.github.io/3d-portfolio/uv/uv.html#?manifest=https://sophiedixon.github.io/3d-portfolio/collection/bird/index.json&c=0&m=0&s=0&cv=0" width="560" height="420" allowfullscreen frameborder="0"></iframe> -->
 
-<iframe src="http://localhost:8002/examples/uv.html#?manifest=http://wellcomelibrary.org/iiif/b18035723/manifest" width="560" height="420" allowfullscreen frameborder="0"></iframe>
-
+<iframe src="https://sophiedixon.github.io/3d-portfolio/uv/uv.html#?manifest=https://sophiedixon.github.io/3d-portfolio/collection/woody/index.json&c=0&m=0&s=0&cv=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
 </body>
 </html>
