--- a/embeds.html
+++ b/embeds.html
@@ -30,6 +30,6 @@
 
 <!-- <iframe src="https://sophiedixon.github.io/3d-portfolio/uv/uv.html#?manifest=https://sophiedixon.github.io/3d-portfolio/collection/bird/index.json&c=0&m=0&s=0&cv=0" width="560" height="420" allowfullscreen frameborder="0"></iframe> -->
 
-<iframe src="https://sophiedixon.github.io/3d-portfolio/uv/uv.html#?manifest=https://sophiedixon.github.io/3d-portfolio/collection/woody/index.json&c=0&m=0&s=0&cv=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
+<iframe src="https://sophiedixon.github.io/3d-portfolio/uv.html#?manifest=https://sophiedixon.github.io/3d-portfolio/collection/animal_skull/index.json&c=0&m=0&s=0&cv=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
 </body>
 </html>
