--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 sequenceIndex: Number(urlDataProvider.get('s', 0)),
                 canvasIndex: Number(urlDataProvider.get('cv', 0)),
                 rotation: Number(urlDataProvider.get('r', 0)),
+                rangeId: urlDataProvider.get('rid', ''),
                 xywh: urlDataProvider.get('xywh', '')
             };
 
