--- a/uv/uv.html
+++ b/uv/uv.html
@@ -60,6 +60,7 @@
                 canvasIndex: Number(urlDataProvider.get('cv', 0)),
                 rotation: Number(urlDataProvider.get('r', 0)),
                 xywh: urlDataProvider.get('xywh', ''),
+                embedded: true,
                 locales: formattedLocales
             }, urlDataProvider);
 
