--- a/two-up.html
+++ b/two-up.html
@@ -19,9 +19,9 @@
 </head>    
 <body>
 
-<iframe id="uv1" src="http://universalviewer.io/examples/uv/uv.html#?manifest=http://api.bl.uk/metadata/iiif/ark:/81055/vdc_100022545251.0x000002/manifest.json&c=0&m=0&s=0&cv=0&config=two-up-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1383,-197,5333,3936&r=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
+<iframe id="uv1" src="https://universalviewer.io/examples/uv/uv.html#?manifest=http://api.bl.uk/metadata/iiif/ark:/81055/vdc_100022545251.0x000002/manifest.json&c=0&m=0&s=0&cv=0&config=two-up-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1383,-197,5333,3936&r=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
 
-<iframe id="uv2" src="http://universalviewer.io/examples/uv/uv.html#?manifest=http://sanddragon.bl.uk/IIIFMetadataService/egerton_ms_3512.json&c=0&m=0&s=0&cv=0&config=two-up-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1383,-197,5333,3936&r=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
+<iframe id="uv2" src="https://universalviewer.io/examples/uv/uv.html#?manifest=http://sanddragon.bl.uk/IIIFMetadataService/egerton_ms_3512.json&c=0&m=0&s=0&cv=0&config=two-up-config.json&locales=en-GB:English (GB),cy-GB:Cymraeg&xywh=-1383,-197,5333,3936&r=0" width="560" height="420" allowfullscreen frameborder="0"></iframe>
 
 <script>
 
