--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <title>3D PORTFOLIO</title>
     <link rel="stylesheet" type="text/css" href="uv/uv.css">
     <link rel="stylesheet" type="text/css" href="portfolio.css">
-    <!-- <script type="text/javascript" src="https://unpkg.com/iiif-gallery/dist/iiifgallery.js"></script> -->
+    <script type="text/javascript" src="https://unpkg.com/iiif-gallery/dist/iiifgallery.js"></script>
     <script type="text/javascript" src="uv/lib/offline.js"></script>
     <script type="text/javascript" src="uv/helpers.js"></script>
 </head>
