--- a/uv/uv.html
+++ b/uv/uv.html
@@ -54,6 +54,7 @@
             uv = createUV('#uv', {
                 root: '.',
                 iiifResourceUri: urlDataProvider.get('manifest'),
+                configUri: urlDataProvider.get('config'),
                 collectionIndex: Number(urlDataProvider.get('c', 0)),
                 manifestIndex: Number(urlDataProvider.get('m', 0)),
                 sequenceIndex: Number(urlDataProvider.get('s', 0)),
