--- a/template.html
+++ b/template.html
@@ -62,9 +62,10 @@
 
         $(function() {
 
+			var isLocalhost = document.location.href.indexOf('localhost') !== -1;
 			var $uv = $('#uv');
 			var $viewer = $('#viewer');
-            var uvurl = '/examples/uv/uv.html#?';
+            var uvurl = (isLocalhost) ? '/examples/uv/uv.html#?' : '/uv/uv.html#?';
             // are there uv hash parameters?
             var manifest = Utils.Urls.getHashParameter('manifest');
             var rangeId = Utils.Urls.getHashParameter('rid');
@@ -76,7 +77,7 @@
                     uvurl += '&rid=' + rangeId;
 				}
 				
-				uvurl += '&config=' + '/examples/template-config.json';
+				uvurl += '&config=' + ((isLocalhost) ? '/examples/template-config.json' : '/template-config.json');
 
                 $uv.prop('src', uvurl);
             }
