--- a/template.html
+++ b/template.html
@@ -31,7 +31,7 @@
         
 		<div id="viewer" class="viewer expandable">
             <iframe id="uv" class="expandable" allowfullscreen frameborder="0"></iframe>
-            <br><button id="expando" class="expand">expand</button>
+            <!-- <br><button id="expando" class="expand">expand</button> -->
         </div>
 		
 		<main role="main">
