--- a/template.html
+++ b/template.html
@@ -7,8 +7,11 @@
     <link rel="canonical" href="http://html5-templates.com/" />
     <title>Example page for Universal Player</title>
     <meta name="description" content="Simple HTML5 Page layout template with header, footer, sidebar etc.">
-    <link rel="stylesheet" href="template-style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="template-style.css">
+	<link rel="stylesheet" type="text/css" href="uv/uv.css">
+    <script src="uv/lib/offline.js"></script>
+    <script src="uv/helpers.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script src="https://rawgit.com/edsilv/utils/master/dist/utils.min.js"></script>
 </head>
 
@@ -30,7 +33,8 @@
 	<section id="pageContent">
         
 		<div id="viewer" class="viewer expandable">
-            <iframe id="uv" class="expandable" allowfullscreen frameborder="0" allowtransparency="true"></iframe>
+			<div id="uv" class="uv"></div>
+            <!-- <iframe id="uv" class="expandable" allowfullscreen frameborder="0" allowtransparency="true"></iframe> -->
             <!-- <br><button id="expando" class="expand">expand</button> -->
         </div>
 		
@@ -60,11 +64,55 @@
 
     <script type="text/javascript">
 
+		var uv, $uv, urlDataProvider, manifest;
+
+		window.addEventListener('uvLoaded', function (e) {
+
+			$uv = $('#uv');
+
+			urlDataProvider = new UV.URLDataProvider();
+
+			var data = {
+				root: './uv',
+				configUri: 'template-config.json',
+				collectionIndex: Number(urlDataProvider.get('c', 0)),
+				manifestIndex: Number(urlDataProvider.get('m', 0)),
+				sequenceIndex: Number(urlDataProvider.get('s', 0)),
+				canvasIndex: Number(urlDataProvider.get('cv', 0)),
+				rotation: Number(urlDataProvider.get('r', 0)),
+				xywh: urlDataProvider.get('xywh', ''),
+				rangeId: urlDataProvider.get('rid', ''),
+				locales: [
+					{
+						name: 'en-GB'
+					}
+				]
+			};
+
+			uv = createUV('#uv', data, urlDataProvider);
+
+			uv.on('created', function() {
+				Utils.Urls.setHashParameter('manifest', manifest);
+			});
+
+			// are there uv hash parameters?
+			manifest = Utils.Urls.getHashParameter('manifest');
+
+			if (manifest) {
+				uv.set(Object.assign(data, {
+					iiifResourceUri: manifest
+				}));
+			}
+
+		}, false);
+
+		/*
         $(function() {
 
 			var isLocalhost = document.location.href.indexOf('localhost') !== -1;
 			var $uv = $('#uv');
 			var $viewer = $('#viewer');
+
             var uvurl = (isLocalhost) ? '/examples/uv/uv.html#?' : '/uv/uv.html#?';
             // are there uv hash parameters?
             var manifest = Utils.Urls.getHashParameter('manifest');
@@ -118,9 +166,12 @@
 			});
 
 			resize();
-        });       
+		});
+		*/
 
-    </script>
+	</script>
+	
+	<script src="uv/uv.js"></script>
 
 </body>
 
