--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
     <script type="text/javascript" src="uv/lib/offline.js"></script>
     <script type="text/javascript" src="uv/helpers.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.3/dat.gui.min.js"></script>
     <style>
         body {
             margin: 0px;
@@ -24,6 +25,7 @@
         #options {
             padding: 20px 0 0 0;
         }
+        
     </style>
 </head>
 <body>
